--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "^5.0.0-rc.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angularfire2": "^5.0.0-rc.2",
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "4.0.0-beta",
     "core-js": "^2.4.1",
     "firebase": "^4.4.0",
     "jquery": "^3.2.1",
@@ -33,7 +33,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.0-beta.4",
+    "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "^5.0.0-rc.1",
     "@angular/language-service": "^5.0.0-rc.1",
     "typescript": "~2.4.1"
